name:           rnr
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  HDBC, HDBC-postgresql, HSH, base >= 4, haskell98, time

executable:     rnr
main-is:        Main.hs
hs-source-dirs: src
