name:           rnr
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:
    base
  , directory
  , filepath
  , HDBC
  , HDBC-sqlite3
  , HSH
  , time

executable:     rnr
main-is:        Main.hs
hs-source-dirs: src
